--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ a:hover{
 .container-fluid{
   align-items: baseline !important;
 }
-.img-fluid {
+.img {
   max-width: calc(2.5*(3vh + 2vw));
   height: auto;
 }
@@ -96,6 +96,31 @@ button:hover{
 .title h3{
   font-size: calc(10% + 1vw + 2.5vh);
   font-weight: bolder;
+}
+
+.docs h1{
+  font-size: calc(10% + 1vw + 3vh);
+  font-weight: bolder;
+}
+.docs h2 {
+  font-weight: 500;
+  font-size: calc(80% + 0.15*5vw + 1vh);
+  color: rgb(105, 195, 255);
+}
+.docs h3 {
+  font-weight: 400;
+  font-size: calc(70% + 0.15*5vw + 1vh);
+  color: rgb(116, 255, 123);
+}
+.docs h4 {
+  font-weight: 300;
+  font-size: calc(60% + 0.15*5vw + 1vh);
+  color: rgb(255, 244, 148);
+}
+.docs pre {
+  color: rgb(255, 151, 208);
+  background-color: #1b44427e;
+  border-radius: 20px;
 }
 .Explore_btn{
   background-color: #f0f8ff;
