--- a/src/portfolio/portfolio.css
+++ b/src/portfolio/portfolio.css
@@ -16,7 +16,7 @@ html{
     color: whitesmoke;
 }
 
-.navbar-brand h2,span{
+.navbar-brand h2{
     color: #00f6ff;
 }
 
@@ -66,7 +66,7 @@ html{
     opacity: 100%;
     text-shadow: 20px 20px 50px #00f6ff;
 }
-.form-control{
+.portfolio-contact-form{
     font-size: 1.5rem;
     color: #00f6ff;
     font-weight: 600;
@@ -74,7 +74,7 @@ html{
     border: 0px;
     box-shadow:3px 2px 3px #00f6ff;
 }
-.form-control:focus{
+.portfolio-contact-form:focus{
     color: #00f6ff;
     font-size: 1.5rem;
     font-weight: 600;
