--- a/src/App.css
+++ b/src/App.css
@@ -267,14 +267,25 @@ p .btn:hover{
 
 }
 
-.address td h4{
-  width: 100%;
-  font-size: calc(2 + 100vw + 2vh);
-  font-weight: 100;
-  padding: 5px 10px;
-  box-shadow: 1px 2px 1px #cae8ff;
-  border-radius: 8px;
 
+.userprofile{
+  box-shadow: 0px 0px 20px #549acf;
+  border: 2px solid #549acf;
+  padding: 20px;
+  border-radius: 30px;
+}
+
+.address td h4{
+  font-weight: 100;
+  box-shadow: 1px 2px 1px #cae8ff;
+  border-radius: 5px;
+  padding-left: 5px;
+}
+
+.address td h4 ,.address th h4{
+  font-size: calc(3 * ( 0.5vw + 0.3vh ));
+  width: 100%;
+  text-align: left;
 }
 
 .address th h4 ,.address td h4{
@@ -296,15 +307,14 @@ p .btn:hover{
   background: transparent;
   color: #f0f8ff;
   border: 0px;
-  outline: none;
   width: 100%;
+  outline: none;
 }
 .address select option{
   background: #cae8ff;
   color: #050a30;
   border: 0px;
   outline: none;
-  width: 100%;
 
 }
 .address select option:hover{
@@ -314,24 +324,10 @@ p .btn:hover{
   outline: none;
   box-shadow: none;
 }
-.address td {
-  width: 300px;
-}
-
-@media screen and (max-width: 600px) {
-  .address td,
-  .address th {
-    display: block;
-    width: 90%;
-    box-sizing: border-box;
-  }
-}
 
 .address th {
-  padding: 4px 10px;
   vertical-align: top;
   display: table-cell;
-  
 }
 .address th label{
   vertical-align: top;
