--- a/src/App.css
+++ b/src/App.css
@@ -269,7 +269,7 @@ p .btn:hover{
 
 
 .userprofile{
-  box-shadow: 0px 0px 20px #549acf;
+  box-shadow: 0px 0px 10px #549acf;
   border: 2px solid #549acf;
   padding: 20px;
   border-radius: 30px;
@@ -347,3 +347,22 @@ p .btn:hover{
   box-shadow: 0px 0px 4px #cae8ff;;
   transition:300ms all ease-in-out;
 }
+
+.card-product .card-body button{
+ font-size: calc(1 * (0.6vh + 0.8vw));
+ width: 100%;
+}
+
+.card-product .card-body .card-text{
+  font-size: calc(1.1 * (0.8vh + 0.8vw));
+  width: 100%;
+  align-items: end;
+  display: flex;
+ }
+
+ .card-product .card-body .card-title{
+  font-size: calc(1.2 * (0.8vh + 0.8vw));
+  font-weight: bolder;
+  color: #00e1ff;
+  width: 100%;
+  }
