--- a/src/application/Auth.css
+++ b/src/application/Auth.css
@@ -1,10 +1,12 @@
 [data-amplify-authenticator] [data-amplify-router] {
     background-color: transparent;
-    box-shadow: 0px 0px 10px #549acf;
+    box-shadow: 0px -2px 2px #549acf;
     border: 0px solid #549acf;
     padding: 0px 25px;
     border-radius: 30px;
     color: #f0f8ff;
+    margin-top: 30px;
+
 }
 .amplify-tabs__item{
     color: #f0f8ff;
@@ -68,16 +70,12 @@
 
 @media (min-width: 768px) {
   .userprofile{
-    box-shadow: 0px 10px 10px #549acf;
+    box-shadow: 0px -4px 1px #549acf;
     border: 0px solid #549acf;
     padding: 20px;
     border-radius: 30px;
   }
 }
-
-
-
-
   .message-paragraph{
     padding-top: 14px;
   }
