--- a/src/portfolio/portfolio.css
+++ b/src/portfolio/portfolio.css
@@ -86,10 +86,9 @@ html{
     color: #00f6ff;
     font-size: calc(1.4rem + 0.1vw + 0.1vh);
     border: 2px solid #00f6ff;
-    padding: 20px 40px;
     border-radius: 10px;
     background-color: transparent;
-    font-weight: 300;
+    font-weight: 600;
     box-shadow: 0px 0px 10px #00f6ff;
 }
 .send-btn:hover{
@@ -134,7 +133,7 @@ html{
     position: relative;
     background-image:
   linear-gradient(rgba(255, 255, 255, 0.3), #050a30),
-  url("../assets/bgimage.jpg");
+  url("../assets/bgimage.webp");
   background-size: cover;
 }
 
@@ -148,7 +147,7 @@ html{
         right: 0px;
         background-image:
         linear-gradient(-90deg,rgba(255, 255, 255, 0.3), #050a30),
-        url("../assets/bgimage.jpg");
+        url("../assets/bgimage.webp");
         background-color: unset;
         z-index: 0;
         border-collapse: collapse;
