--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@ header{
   object-fit:contain;
   padding: auto;
   margin: auto;
-
+}
+.cart-img{
+  width:max-content;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 .explore{
   border-radius:0% 0% 40px 40px;
@@ -124,7 +129,10 @@ button:hover{
   font-size: calc(10% + 0.5vw + 2vh);
   font-weight: bolder;
 }
-
+.title h5{
+  font-size: calc(8% + 0.5vw + 1.5vh);
+  font-weight: bolder;
+}
 .story-data h3{
   font-size: calc(10% + 1.3vw + 1.5vh);
   font-weight:100;
@@ -358,4 +366,9 @@ p .btn:hover{
   line-clamp: unset;           /* Standard property for compatibility */
   overflow: visible;           /* Allow overflow to show full text */
   white-space: normal;         /* Allow text to wrap normally */
+}
+.border-left{
+  border-left: #cae8ff solid 2px;
+  border-radius: 1rem;
+  border-top: #00e1ff solid 2px;
 }
