--- a/src/App.css
+++ b/src/App.css
@@ -327,6 +327,19 @@ p .btn:hover{
   transition:300ms all ease-in-out;
 }
 
+.btn-bottom-bar{
+  background-color: transparent;
+  color:#f0f8ff;
+  font-weight: 300;
+  font-size: calc(1% + 0.1vw + 2vh);
+
+}
+
+.btn-bottom-bar.active {
+    color: #0088ff;
+    box-shadow: 0px 0px 4px #cae8ff;
+}
+
 .card-product .card-body button{
  font-size: calc(1 * (0.6vh + 0.8vw));
  width: 100%;
@@ -418,4 +431,19 @@ p .btn:hover{
 }
 .end-minus-30{
   right: -3rem !important;
+}
+
+.bottom-bar {
+  transition: transform 0.4s ease-in-out;
+}
+
+.slide-up {
+  transform: translateY(0);
+}
+
+.slide-down {
+  transform: translateY(100%);
+}
+.bg-default{
+  background-color: #050a30;
 }
