--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #050a30;
+  background-color: #050a2b;
   color: #f0f8ff;
   font-family :Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
